[package]
name = "artillery-core"
version = "0.1.0"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
failure = "0.1.6"
failure_derive = "0.1.6"
bastion-utils = "0.3.2"
cuneiform-fields = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.7.3"
mio = { version = "0.7.0-alpha.1", features = ["os-poll", "udp"] }
futures = "0.3"
libp2p = "0.16.0"
bastion-executor = "0.3.4"
lightproc = "0.3.4"
crossbeam-channel = "0.4.2"
fail = "0.3"

[dev-dependencies]
bincode = "1.2.1"
clap = "2.33.0"
pretty_env_logger = "0.4.0"
once_cell = "1.3.1"
criterion = "0.3.1"
trybuild = "1.0"
bastion = "0.3"


[[test]]
name = "epidemic-state-change-tail-follow"
path = "tests/failpoints/epidemic-state-change-tail-follow.rs"
required-features = ["fail/failpoints"]

[[test]]
name = "epidemic-periodic-index"
path = "tests/failpoints/epidemic-periodic-index.rs"
required-features = ["fail/failpoints"]