[package]
name = "artillery-core"
version = "0.1.1"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
description = "Fire-forged cluster management & Distributed data protocol"
keywords = ["cluster", "distributed", "data", "replication"]
categories = ["network-programming", "database-implementations"]
homepage = "https://artillery.bastion.rs/"
repository = "https://github.com/bastion-rs/artillery"
documentation = "https://docs.rs/artillery-core"
edition = "2018"
license = "Apache-2.0/MIT"

[dependencies]
log = "0.4"
failure = "0.1.7"
failure_derive = "0.1.6"
bastion-utils = "0.3.2"
cuneiform-fields = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.7.3"
mio = { version = "0.7.0-alpha.1", features = ["os-poll", "udp"] }
futures = "0.3.5"
pin-utils = "0.1.0-alpha.4"
libp2p = { version = "0.18", features = ["mdns"] }
bastion-executor = "0.3.4"
lightproc = "0.3.4"
crossbeam-channel = "0.4.2"
kaos = "0.1.1-alpha.2"

[dev-dependencies]
bincode = "1.2.1"
clap = "2.33.0"
pretty_env_logger = "0.4.0"
once_cell = "1.3.1"
criterion = "0.3.1"

[[test]]
name = "chaos_tests"
path = "kaos-tests/launcher.rs"
