[package]
name = "artillery-ddata"
version = "0.1.0"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
failure = "0.1.7"
thrift = "0.13.0"
t1ha = "0.1"
crossbeam-channel = "0.5"


[dev-dependencies]
clap = "2.33.0"
pretty_env_logger = "0.4.0"
bastion-executor = "0.3.5"
lightproc = "0.3.5"
rand = "0.7"
criterion = "0.3"
futures = "0.3"


[[bench]]
name = "craq_bencher"
harness = false
